--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,175 @@
 <!doctype html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./output.css" rel="stylesheet">
-</head>
-<body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link href="./output.css" rel="stylesheet" />
+        <title>Mysterious Pathways | Adventure Awaits</title>
+    </head>
+    <body class="bg-gray-50">
+        <!-- Header -->
+        <header class="fixed w-full bg-white shadow-sm z-50">
+            <div class="container mx-auto px-6 py-4">
+                <div class="flex items-center justify-between">
+                    <div class="flex items-center">
+                        <span class="text-2xl font-semibold text-gray-800"
+                            >Mysterious Pathways</span
+                        >
+                    </div>
+                    <nav class="hidden md:flex space-x-8">
+                        <a href="#" class="text-gray-600 hover:text-gray-900"
+                            >Destinations</a
+                        >
+                        <a href="#" class="text-gray-600 hover:text-gray-900"
+                            >Experiences</a
+                        >
+                        <a href="#" class="text-gray-600 hover:text-gray-900"
+                            >About</a
+                        >
+                        <a href="#" class="text-gray-600 hover:text-gray-900"
+                            >Contact</a
+                        >
+                    </nav>
+                </div>
+            </div>
+        </header>
+
+        <!-- Hero Section -->
+        <main class="pt-24">
+            <div class="container mx-auto px-6">
+                <div
+                    class="h-screen flex items-center justify-center flex-col text-center"
+                >
+                    <h1
+                        class="text-5xl md:text-6xl font-bold text-gray-900 mb-6"
+                    >
+                        Discover Your Next Adventure
+                    </h1>
+                    <p class="text-xl text-gray-600 mb-8 max-w-2xl">
+                        Embark on extraordinary journeys to the world's most
+                        enigmatic destinations. Let us guide you through paths
+                        less traveled.
+                    </p>
+                    <button
+                        class="bg-indigo-600 text-white px-8 py-3 rounded-lg hover:bg-indigo-700 transition duration-300"
+                    >
+                        Start Your Journey
+                    </button>
+                </div>
+            </div>
+
+            <!-- Featured Destinations -->
+            <div class="bg-white py-24">
+                <div class="container mx-auto px-6">
+                    <h2 class="text-3xl font-bold text-center mb-12">
+                        Popular Destinations
+                    </h2>
+                    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                        <!-- Destination Cards -->
+                        <div class="rounded-lg shadow-lg overflow-hidden">
+                            <img
+                                src="https://source.unsplash.com/800x600/?mountains"
+                                alt="Mountains"
+                                class="w-full h-48 object-cover"
+                            />
+                            <div class="p-6">
+                                <h3 class="font-bold text-xl mb-2">
+                                    Mountain Expeditions
+                                </h3>
+                                <p class="text-gray-600">
+                                    Explore majestic peaks and hidden valleys
+                                </p>
+                            </div>
+                        </div>
+                        <div class="rounded-lg shadow-lg overflow-hidden">
+                            <img
+                                src="https://source.unsplash.com/800x600/?beach"
+                                alt="Beach"
+                                class="w-full h-48 object-cover"
+                            />
+                            <div class="p-6">
+                                <h3 class="font-bold text-xl mb-2">
+                                    Coastal Retreats
+                                </h3>
+                                <p class="text-gray-600">
+                                    Discover secluded beaches and island
+                                    paradises
+                                </p>
+                            </div>
+                        </div>
+                        <div class="rounded-lg shadow-lg overflow-hidden">
+                            <img
+                                src="https://source.unsplash.com/800x600/?forest"
+                                alt="Forest"
+                                class="w-full h-48 object-cover"
+                            />
+                            <div class="p-6">
+                                <h3 class="font-bold text-xl mb-2">
+                                    Forest Adventures
+                                </h3>
+                                <p class="text-gray-600">
+                                    Journey through ancient woodlands
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
+
+        <!-- Footer -->
+        <footer class="bg-gray-800 text-white">
+            <div class="container mx-auto px-6 py-12">
+                <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
+                    <div>
+                        <h3 class="text-lg font-semibold mb-4">
+                            Mysterious Pathways
+                        </h3>
+                        <p class="text-gray-400">
+                            Your gateway to extraordinary adventures
+                        </p>
+                    </div>
+                    <div>
+                        <h4 class="text-lg font-semibold mb-4">Contact</h4>
+                        <p class="text-gray-400">
+                            Email: info@mysterioupathways.com
+                        </p>
+                        <p class="text-gray-400">Phone: +1 (555) 123-4567</p>
+                    </div>
+                    <div>
+                        <h4 class="text-lg font-semibold mb-4">Follow Us</h4>
+                        <div class="flex space-x-4">
+                            <a href="#" class="text-gray-400 hover:text-white"
+                                >Instagram</a
+                            >
+                            <a href="#" class="text-gray-400 hover:text-white"
+                                >Twitter</a
+                            >
+                            <a href="#" class="text-gray-400 hover:text-white"
+                                >Facebook</a
+                            >
+                        </div>
+                    </div>
+                    <div>
+                        <h4 class="text-lg font-semibold mb-4">Newsletter</h4>
+                        <p class="text-gray-400 mb-4">
+                            Subscribe for travel updates
+                        </p>
+                        <input
+                            type="email"
+                            placeholder="Enter your email"
+                            class="w-full px-4 py-2 rounded-lg text-gray-900"
+                        />
+                    </div>
+                </div>
+            </div>
+            <div class="border-t border-gray-700">
+                <div class="container mx-auto px-6 py-4">
+                    <p class="text-center text-gray-400">
+                        © 2024 Mysterious Pathways. All rights reserved.
+                    </p>
+                </div>
+            </div>
+        </footer>
+    </body>
 </html>
