--- a/src/index.html
+++ b/src/index.html
@@ -38,23 +38,37 @@
         <main class="pt-24">
             <div class="container mx-auto px-6">
                 <div
-                    class="h-screen flex items-center justify-center flex-col text-center"
+                    class="h-screen flex items-center justify-center flex-col text-center relative"
                 >
-                    <h1
-                        class="text-5xl md:text-6xl font-bold text-gray-900 mb-6"
+                    <video
+                        autoplay
+                        muted
+                        loop
+                        class="absolute top-0 left-0 w-full h-full object-cover z-0"
+                        style="object-fit: cover; width: 100vw; height: 100vh"
                     >
-                        Discover Your Next Adventure
-                    </h1>
-                    <p class="text-xl text-gray-600 mb-8 max-w-2xl">
-                        Embark on extraordinary journeys to the world's most
-                        enigmatic destinations. Let us guide you through paths
-                        less traveled.
-                    </p>
-                    <button
-                        class="bg-indigo-600 text-white px-8 py-3 rounded-lg hover:bg-indigo-700 transition duration-300"
-                    >
-                        Start Your Journey
-                    </button>
+                        <source
+                            src="../assets/videos/mount.mp4"
+                            type="video/mp4"
+                        />
+                    </video>
+                    <div class="relative z-10 mix-blend-exclusion">
+                        <h1
+                            class="text-5xl md:text-6xl font-bold text-white mb-6"
+                        >
+                            Discover Your NEXT(.js) Adventure
+                        </h1>
+                        <p class="text-xl text-white mb-8 max-w-2xl">
+                            Embark on MIST-erious journeys to the world's most
+                            enigmatic venues. Playfair and eat potato (MD5)
+                            hashes.
+                        </p>
+                        <button
+                            class="bg-indigo-600 text-white px-8 py-3 rounded-lg hover:bg-indigo-700 transition duration-300"
+                        >
+                            Start Your Journey
+                        </button>
+                    </div>
                 </div>
             </div>
 
