--- a/src/index.html
+++ b/src/index.html
@@ -35,39 +35,36 @@
         </header>
 
         <!-- Hero Section -->
-        <main class="pt-24">
-            <div class="container mx-auto px-6">
+        <main>
+            <div
+                class="h-screen bg-cover bg-center"
+                style="
+                    background-image: url(&quot;https://images.unsplash.com/photo-1501884428012-aa321a256730?q=80&w=2348&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&quot;);
+                "
+            >
                 <div
-                    class="h-screen flex items-center justify-center flex-col text-center relative"
+                    class="h-full w-full bg-black bg-opacity-50 flex items-center justify-center"
                 >
-                    <video
-                        autoplay
-                        muted
-                        loop
-                        class="absolute top-0 left-0 w-full h-full object-cover z-0"
-                        style="object-fit: cover; width: 100vw; height: 100vh"
-                    >
-                        <source
-                            src="../assets/videos/mount.mp4"
-                            type="video/mp4"
-                        />
-                    </video>
-                    <div class="relative z-10 mix-blend-exclusion">
-                        <h1
-                            class="text-5xl md:text-6xl font-bold text-white mb-6"
+                    <div class="container mx-auto px-6">
+                        <div
+                            class="flex items-center justify-center flex-col text-center"
                         >
-                            Discover Your NEXT(.js) Adventure
-                        </h1>
-                        <p class="text-xl text-white mb-8 max-w-2xl">
-                            Embark on MIST-erious journeys to the world's most
-                            enigmatic venues. Playfair and eat potato (MD5)
-                            hashes.
-                        </p>
-                        <button
-                            class="bg-indigo-600 text-white px-8 py-3 rounded-lg hover:bg-indigo-700 transition duration-300"
-                        >
-                            Start Your Journey
-                        </button>
+                            <h1
+                                class="text-5xl md:text-6xl font-bold text-white mb-6"
+                            >
+                                Discover Your Next Adventure
+                            </h1>
+                            <p class="text-xl text-white mb-8 max-w-2xl">
+                                Embark on extraordinary journeys to the world's
+                                most enigmatic destinations. Let us guide you
+                                through paths less traveled.
+                            </p>
+                            <button
+                                class="bg-indigo-600 text-white px-8 py-3 rounded-lg hover:bg-indigo-700 transition duration-300"
+                            >
+                                Start Your Journey
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
