--- a/src/index.html
+++ b/src/index.html
@@ -1,32 +1,48 @@
 <!doctype html>
-<html>
+<html class="dark">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="./output.css" rel="stylesheet" />
-        <title>Mysterious Pathways | Adventure Awaits</title>
+        <title>Wanderlust | Journey Into The Unknown</title>
     </head>
-    <body class="bg-gray-50">
+    <body class="bg-black text-slate-100 antialiased">
         <!-- Header -->
-        <header class="fixed w-full bg-white shadow-sm z-50">
+        <header
+            class="fixed w-full bg-black/90 backdrop-blur-md z-50 border-b border-purple-900/30"
+        >
             <div class="container mx-auto px-6 py-4">
                 <div class="flex items-center justify-between">
                     <div class="flex items-center">
-                        <span class="text-2xl font-semibold text-gray-800"
-                            >Mysterious Pathways</span
+                        <span
+                            class="text-2xl font-bold text-purple-500 tracking-wide"
+                            >Wanderlust</span
                         >
                     </div>
                     <nav class="hidden md:flex space-x-8">
-                        <a href="#" class="text-gray-600 hover:text-gray-900"
+                        <a
+                            href="#"
+                            class="text-slate-300 hover:text-purple-400 transition-colors tracking-wide"
+                            >Home</a
+                        >
+                        <a
+                            href="#"
+                            class="text-slate-300 hover:text-purple-400 transition-colors tracking-wide"
                             >Destinations</a
                         >
-                        <a href="#" class="text-gray-600 hover:text-gray-900"
-                            >Experiences</a
+                        <a
+                            href="#"
+                            class="text-slate-300 hover:text-purple-400 transition-colors tracking-wide"
+                            >Packages</a
                         >
-                        <a href="#" class="text-gray-600 hover:text-gray-900"
-                            >About</a
+                        <a
+                            href="#"
+                            class="text-slate-300 hover:text-purple-400 transition-colors tracking-wide"
+                            >Blog</a
                         >
-                        <a href="#" class="text-gray-600 hover:text-gray-900"
+                        <a
+                            href="#"
+                            class="text-slate-300 hover:text-purple-400 transition-colors tracking-wide"
                             >Contact</a
                         >
                     </nav>
@@ -36,33 +52,39 @@
 
         <!-- Hero Section -->
         <main>
-            <div
-                class="h-screen bg-cover bg-center"
-                style="
-                    background-image: url(&quot;https://images.unsplash.com/photo-1501884428012-aa321a256730?q=80&w=2348&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&quot;);
-                "
-            >
-                <div
-                    class="h-full w-full bg-black bg-opacity-50 flex items-center justify-center"
-                >
-                    <div class="container mx-auto px-6">
-                        <div
-                            class="flex items-center justify-center flex-col text-center"
+            <div class="relative h-screen">
+                <div class="absolute inset-0">
+                    <img
+                        src="https://images.unsplash.com/photo-1506318164473-2dfd3ede3623?q=80&w=3270&auto=format&fit=crop"
+                        alt="Hero Background"
+                        class="w-full h-full object-cover"
+                    />
+                    <div class="absolute inset-0 bg-black/75"></div>
+                </div>
+
+                <div class="relative h-full flex items-center justify-center">
+                    <div class="text-center space-y-8 px-4">
+                        <h1
+                            class="text-6xl md:text-8xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-purple-400 via-pink-500 to-purple-600 tracking-tight leading-tight"
                         >
-                            <h1
-                                class="text-5xl md:text-6xl font-bold text-white mb-6"
-                            >
-                                Discover Your Next Adventure
-                            </h1>
-                            <p class="text-xl text-white mb-8 max-w-2xl">
-                                Embark on extraordinary journeys to the world's
-                                most enigmatic destinations. Let us guide you
-                                through paths less traveled.
-                            </p>
+                            Venture Beyond
+                        </h1>
+                        <p
+                            class="text-xl md:text-2xl text-slate-300 max-w-2xl mx-auto tracking-wide leading-relaxed"
+                        >
+                            Explore uncharted territories. Create unforgettable
+                            stories.
+                        </p>
+                        <div class="flex gap-4 justify-center">
                             <button
-                                class="bg-indigo-600 text-white px-8 py-3 rounded-lg hover:bg-indigo-700 transition duration-300"
+                                class="px-8 py-3 bg-purple-600 hover:bg-purple-700 rounded-sm transition-all duration-300 text-white tracking-wide"
                             >
-                                Start Your Journey
+                                Explore Destinations
+                            </button>
+                            <button
+                                class="px-8 py-3 border border-purple-500 text-purple-400 hover:bg-purple-600 hover:text-white rounded-sm transition-all duration-300 tracking-wide"
+                            >
+                                View Packages
                             </button>
                         </div>
                     </div>
@@ -70,115 +92,62 @@
             </div>
 
             <!-- Featured Destinations -->
-            <div class="bg-white py-24">
+            <section class="py-24 bg-zinc-950">
                 <div class="container mx-auto px-6">
-                    <h2 class="text-3xl font-bold text-center mb-12">
-                        Popular Destinations
+                    <h2
+                        class="text-3xl font-bold mb-16 text-center tracking-wide"
+                    >
+                        <span class="text-purple-500">Featured</span>
+                        Destinations
                     </h2>
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-                        <!-- Destination Cards -->
-                        <div class="rounded-lg shadow-lg overflow-hidden">
+                        <div class="group relative overflow-hidden rounded-sm">
                             <img
-                                src="https://source.unsplash.com/800x600/?mountains"
-                                alt="Mountains"
-                                class="w-full h-48 object-cover"
+                                src="https://source.unsplash.com/800x600/?iceland"
+                                alt="Iceland"
+                                class="w-full h-[400px] object-cover transition-transform duration-500 group-hover:scale-110"
                             />
-                            <div class="p-6">
-                                <h3 class="font-bold text-xl mb-2">
-                                    Mountain Expeditions
-                                </h3>
-                                <p class="text-gray-600">
-                                    Explore majestic peaks and hidden valleys
-                                </p>
+                            <div
+                                class="absolute inset-0 bg-gradient-to-t from-black via-transparent to-transparent"
+                            >
+                                <div class="absolute bottom-0 p-6">
+                                    <h3
+                                        class="text-2xl font-bold mb-2 tracking-wide"
+                                    >
+                                        Iceland
+                                    </h3>
+                                    <p class="text-slate-300 tracking-wide">
+                                        Northern Lights & Ice Caves
+                                    </p>
+                                </div>
                             </div>
                         </div>
-                        <div class="rounded-lg shadow-lg overflow-hidden">
-                            <img
-                                src="https://source.unsplash.com/800x600/?beach"
-                                alt="Beach"
-                                class="w-full h-48 object-cover"
-                            />
-                            <div class="p-6">
-                                <h3 class="font-bold text-xl mb-2">
-                                    Coastal Retreats
-                                </h3>
-                                <p class="text-gray-600">
-                                    Discover secluded beaches and island
-                                    paradises
-                                </p>
-                            </div>
-                        </div>
-                        <div class="rounded-lg shadow-lg overflow-hidden">
-                            <img
-                                src="https://source.unsplash.com/800x600/?forest"
-                                alt="Forest"
-                                class="w-full h-48 object-cover"
-                            />
-                            <div class="p-6">
-                                <h3 class="font-bold text-xl mb-2">
-                                    Forest Adventures
-                                </h3>
-                                <p class="text-gray-600">
-                                    Journey through ancient woodlands
-                                </p>
-                            </div>
-                        </div>
+                        <!-- Add more destination cards with similar structure -->
                     </div>
                 </div>
-            </div>
+            </section>
         </main>
 
         <!-- Footer -->
-        <footer class="bg-gray-800 text-white">
+        <footer class="bg-black border-t border-purple-900/30">
             <div class="container mx-auto px-6 py-12">
-                <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
-                    <div>
-                        <h3 class="text-lg font-semibold mb-4">
-                            Mysterious Pathways
+                <div class="grid grid-cols-1 md:grid-cols-4 gap-12">
+                    <div class="space-y-4">
+                        <h3
+                            class="text-xl font-bold text-purple-500 tracking-wide"
+                        >
+                            Wanderlust
                         </h3>
-                        <p class="text-gray-400">
-                            Your gateway to extraordinary adventures
+                        <p class="text-slate-400 tracking-wide">
+                            Crafting journeys that inspire
                         </p>
                     </div>
-                    <div>
-                        <h4 class="text-lg font-semibold mb-4">Contact</h4>
-                        <p class="text-gray-400">
-                            Email: info@mysterioupathways.com
-                        </p>
-                        <p class="text-gray-400">Phone: +1 (555) 123-4567</p>
-                    </div>
-                    <div>
-                        <h4 class="text-lg font-semibold mb-4">Follow Us</h4>
-                        <div class="flex space-x-4">
-                            <a href="#" class="text-gray-400 hover:text-white"
-                                >Instagram</a
-                            >
-                            <a href="#" class="text-gray-400 hover:text-white"
-                                >Twitter</a
-                            >
-                            <a href="#" class="text-gray-400 hover:text-white"
-                                >Facebook</a
-                            >
-                        </div>
-                    </div>
-                    <div>
-                        <h4 class="text-lg font-semibold mb-4">Newsletter</h4>
-                        <p class="text-gray-400 mb-4">
-                            Subscribe for travel updates
-                        </p>
-                        <input
-                            type="email"
-                            placeholder="Enter your email"
-                            class="w-full px-4 py-2 rounded-lg text-gray-900"
-                        />
-                    </div>
+                    <!-- Add more footer sections -->
                 </div>
-            </div>
-            <div class="border-t border-gray-700">
-                <div class="container mx-auto px-6 py-4">
-                    <p class="text-center text-gray-400">
-                        © 2024 Mysterious Pathways. All rights reserved.
-                    </p>
+                <div
+                    class="mt-12 pt-8 border-t border-purple-900/30 text-center text-slate-400 tracking-wide"
+                >
+                    © 2024 Wanderlust. All rights reserved.
                 </div>
             </div>
         </footer>
