--- a/src/index.html
+++ b/src/index.html
@@ -1,155 +1,245 @@
 <!doctype html>
-<html class="dark">
+<html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link href="./output.css" rel="stylesheet" />
-        <title>Wanderlust | Journey Into The Unknown</title>
+        <title>Wanderlust Travel</title>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap"
+            rel="stylesheet"
+        />
+        <style>
+            :root {
+                --primary-dark: #121212;
+                --secondary-dark: #1e1e1e;
+                --accent: #00b4d8;
+                --text: #ffffff;
+                --text-muted: #bbbbbb;
+            }
+
+            * {
+                margin: 0;
+                padding: 0;
+                box-sizing: border-box;
+            }
+
+            body {
+                background-color: var(--primary-dark);
+                color: var(--text);
+                font-family: "Inter", sans-serif;
+            }
+
+            header {
+                position: fixed;
+                width: 100%;
+                z-index: 1000;
+                background: linear-gradient(
+                    180deg,
+                    rgba(0, 0, 0, 0.8) 0%,
+                    rgba(0, 0, 0, 0) 100%
+                );
+            }
+
+            nav {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                padding: 2rem 5%;
+            }
+
+            .logo {
+                font-size: 1.8rem;
+                font-weight: 700;
+                color: var(--accent);
+            }
+
+            nav ul {
+                display: flex;
+                list-style: none;
+                gap: 2rem;
+            }
+
+            nav a {
+                color: var(--text);
+                text-decoration: none;
+                font-weight: 500;
+                transition: color 0.3s ease;
+            }
+
+            nav a:hover {
+                color: var(--accent);
+            }
+
+            nav a.active {
+                border-bottom: 2px solid var(--accent);
+                padding-bottom: 4px;
+            }
+
+            .hero {
+                height: 100vh;
+                position: relative;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                text-align: center;
+                padding: 0 2rem;
+            }
+
+            .hero video {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                z-index: -1;
+                filter: brightness(0.6);
+            }
+
+            .hero h1 {
+                font-size: 4.5rem;
+                font-weight: 700;
+                margin-bottom: 1rem;
+                text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+            }
+
+            .hero p {
+                font-size: 1.5rem;
+                color: var(--text-muted);
+                margin-bottom: 2rem;
+            }
+
+            .cta-button {
+                background: var(--accent);
+                color: var(--text);
+                padding: 1rem 2rem;
+                border: none;
+                border-radius: 5px;
+                font-size: 1.1rem;
+                font-weight: 600;
+                cursor: pointer;
+                transition: transform 0.3s ease;
+                text-decoration: none;
+            }
+
+            .cta-button:hover {
+                transform: translateY(-2px);
+            }
+
+            .featured-destinations {
+                padding: 5rem 5%;
+                background: var(--secondary-dark);
+            }
+
+            .destinations-grid {
+                display: grid;
+                grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+                gap: 2rem;
+                margin-top: 3rem;
+            }
+
+            .destination-card {
+                position: relative;
+                height: 400px;
+                border-radius: 10px;
+                overflow: hidden;
+                cursor: pointer;
+            }
+
+            .destination-card img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                transition: transform 0.5s ease;
+            }
+
+            .destination-card:hover img {
+                transform: scale(1.1);
+            }
+
+            .destination-info {
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                padding: 2rem;
+                background: linear-gradient(
+                    0deg,
+                    rgba(0, 0, 0, 0.8) 0%,
+                    rgba(0, 0, 0, 0) 100%
+                );
+            }
+
+            .destination-info h3 {
+                font-size: 1.5rem;
+                margin-bottom: 0.5rem;
+            }
+
+            .destination-info p {
+                color: var(--text-muted);
+            }
+        </style>
     </head>
-    <body class="bg-black text-slate-100 antialiased">
-        <!-- Header -->
-        <header
-            class="fixed w-full bg-black/90 backdrop-blur-md z-50 border-b border-purple-900/30"
-        >
-            <div class="container mx-auto px-6 py-4">
-                <div class="flex items-center justify-between">
-                    <div class="flex items-center">
-                        <span
-                            class="text-2xl font-bold text-purple-500 tracking-wide"
-                            >Wanderlust</span
-                        >
-                    </div>
-                    <nav class="hidden md:flex space-x-8">
-                        <a
-                            href="#"
-                            class="text-slate-300 hover:text-purple-400 transition-colors tracking-wide"
-                            >Home</a
-                        >
-                        <a
-                            href="#"
-                            class="text-slate-300 hover:text-purple-400 transition-colors tracking-wide"
-                            >Destinations</a
-                        >
-                        <a
-                            href="#"
-                            class="text-slate-300 hover:text-purple-400 transition-colors tracking-wide"
-                            >Packages</a
-                        >
-                        <a
-                            href="#"
-                            class="text-slate-300 hover:text-purple-400 transition-colors tracking-wide"
-                            >Blog</a
-                        >
-                        <a
-                            href="#"
-                            class="text-slate-300 hover:text-purple-400 transition-colors tracking-wide"
-                            >Contact</a
-                        >
-                    </nav>
-                </div>
-            </div>
+    <body>
+        <header>
+            <nav>
+                <div class="logo">Wanderlust</div>
+                <ul>
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="/destinations">Destinations</a></li>
+                    <li><a href="/packages">Packages</a></li>
+                    <li><a href="/blog">Blog</a></li>
+                    <li><a href="/contact">Contact</a></li>
+                </ul>
+            </nav>
         </header>
 
-        <!-- Hero Section -->
         <main>
-            <div class="relative h-screen">
-                <div class="absolute inset-0">
-                    <img
-                        src="https://images.unsplash.com/photo-1506318164473-2dfd3ede3623?q=80&w=3270&auto=format&fit=crop"
-                        alt="Hero Background"
-                        class="w-full h-full object-cover"
-                    />
-                    <div class="absolute inset-0 bg-black/75"></div>
-                </div>
+            <section class="hero">
+                <video autoplay muted loop>
+                    <source src="../assets/videos/mount.mp4" type="video/mp4" />
+                </video>
+                <h1>Explore the Unknown</h1>
+                <p>Your journey begins here</p>
+                <a href="/destinations" class="cta-button">Discover Now</a>
+            </section>
 
-                <div class="relative h-full flex items-center justify-center">
-                    <div class="text-center space-y-8 px-4">
-                        <h1
-                            class="text-6xl md:text-8xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-purple-400 via-pink-500 to-purple-600 tracking-tight leading-tight"
-                        >
-                            Venture Beyond
-                        </h1>
-                        <p
-                            class="text-xl md:text-2xl text-slate-300 max-w-2xl mx-auto tracking-wide leading-relaxed"
-                        >
-                            Explore uncharted territories. Create unforgettable
-                            stories.
-                        </p>
-                        <div class="flex gap-4 justify-center">
-                            <button
-                                class="px-8 py-3 bg-purple-600 hover:bg-purple-700 rounded-sm transition-all duration-300 text-white tracking-wide"
-                            >
-                                Explore Destinations
-                            </button>
-                            <button
-                                class="px-8 py-3 border border-purple-500 text-purple-400 hover:bg-purple-600 hover:text-white rounded-sm transition-all duration-300 tracking-wide"
-                            >
-                                View Packages
-                            </button>
+            <section class="featured-destinations">
+                <h2>Featured Destinations</h2>
+                <div class="destinations-grid">
+                    <div class="destination-card">
+                        <img
+                            src="https://images.unsplash.com/photo-1590523741831-ab7e8b8f9c7f"
+                            alt="Bali"
+                        />
+                        <div class="destination-info">
+                            <h3>Bali, Indonesia</h3>
+                            <p>From $899</p>
                         </div>
                     </div>
-                </div>
-            </div>
-
-            <!-- Featured Destinations -->
-            <section class="py-24 bg-zinc-950">
-                <div class="container mx-auto px-6">
-                    <h2
-                        class="text-3xl font-bold mb-16 text-center tracking-wide"
-                    >
-                        <span class="text-purple-500">Featured</span>
-                        Destinations
-                    </h2>
-                    <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-                        <div class="group relative overflow-hidden rounded-sm">
-                            <img
-                                src="https://source.unsplash.com/800x600/?iceland"
-                                alt="Iceland"
-                                class="w-full h-[400px] object-cover transition-transform duration-500 group-hover:scale-110"
-                            />
-                            <div
-                                class="absolute inset-0 bg-gradient-to-t from-black via-transparent to-transparent"
-                            >
-                                <div class="absolute bottom-0 p-6">
-                                    <h3
-                                        class="text-2xl font-bold mb-2 tracking-wide"
-                                    >
-                                        Iceland
-                                    </h3>
-                                    <p class="text-slate-300 tracking-wide">
-                                        Northern Lights & Ice Caves
-                                    </p>
-                                </div>
-                            </div>
+                    <div class="destination-card">
+                        <img
+                            src="https://images.unsplash.com/photo-1523906834658-6e24ef2386f9"
+                            alt="Venice"
+                        />
+                        <div class="destination-info">
+                            <h3>Venice, Italy</h3>
+                            <p>From $1099</p>
                         </div>
-                        <!-- Add more destination cards with similar structure -->
+                    </div>
+                    <div class="destination-card">
+                        <img
+                            src="https://images.unsplash.com/photo-1573790387438-4da905039392"
+                            alt="Santorini"
+                        />
+                        <div class="destination-info">
+                            <h3>Santorini, Greece</h3>
+                            <p>From $999</p>
+                        </div>
                     </div>
                 </div>
             </section>
         </main>
-
-        <!-- Footer -->
-        <footer class="bg-black border-t border-purple-900/30">
-            <div class="container mx-auto px-6 py-12">
-                <div class="grid grid-cols-1 md:grid-cols-4 gap-12">
-                    <div class="space-y-4">
-                        <h3
-                            class="text-xl font-bold text-purple-500 tracking-wide"
-                        >
-                            Wanderlust
-                        </h3>
-                        <p class="text-slate-400 tracking-wide">
-                            Crafting journeys that inspire
-                        </p>
-                    </div>
-                    <!-- Add more footer sections -->
-                </div>
-                <div
-                    class="mt-12 pt-8 border-t border-purple-900/30 text-center text-slate-400 tracking-wide"
-                >
-                    © 2024 Wanderlust. All rights reserved.
-                </div>
-            </div>
-        </footer>
     </body>
 </html>
