updated video; still trying to add exclusion blend mode without success

--- a/src/index.html
+++ b/src/index.html
@@ -197,11 +197,15 @@
 
         <main>
             <section class="hero">
-                <video autoplay muted loop>
+                <video autoplay muted loop class="brightness-75">
                     <source src="../assets/videos/mount.mp4" type="video/mp4" />
                 </video>
-                <h1>Explore the Unknown</h1>
-                <p>Your journey begins here</p>
+                <h1 class="blend-exclusion text-white text-7xl font-bold mb-4">
+                    Explore the Unknown
+                </h1>
+                <p class="blend-exclusion text-white text-xl mb-8">
+                    Your journey begins here
+                </p>
                 <a href="/destinations" class="cta-button">Discover Now</a>
             </section>
 
