--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Wanderlust Travel</title>
         <link
-            href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@300;400;500;600&display=swap"
+            href="https://fonts.googleapis.com/css2?family=SF+Pro+Display:wght@300;400;500;600&family=Playfair+Display:wght@700&display=swap"
             rel="stylesheet"
         />
         <style>
@@ -15,6 +15,7 @@
                 --accent: #0066cc;
                 --text: #1d1d1f;
                 --text-muted: #86868b;
+                --gradient: linear-gradient(135deg, #0066cc, #5b3cdd);
             }
 
             * {
@@ -26,7 +27,11 @@
             body {
                 background-color: var(--primary-dark);
                 color: var(--text);
-                font-family: "SF Pro Display", -apple-system, BlinkMacSystemFont, sans-serif;
+                font-family:
+                    "SF Pro Display",
+                    -apple-system,
+                    BlinkMacSystemFont,
+                    sans-serif;
                 -webkit-font-smoothing: antialiased;
             }
 
@@ -49,9 +54,12 @@
             }
 
             .logo {
-                font-size: 1.3rem;
-                font-weight: 500;
-                color: var(--text);
+                font-size: 1.5rem;
+                font-weight: 600;
+                background: var(--gradient);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+                letter-spacing: -0.5px;
             }
 
             nav ul {
@@ -63,17 +71,21 @@
             nav a {
                 color: var(--text);
                 text-decoration: none;
-                font-weight: 400;
-                font-size: 0.9rem;
-                transition: opacity 0.3s ease;
+                font-weight: 500;
+                font-size: 0.95rem;
+                transition: all 0.3s ease;
+                padding: 0.5rem 1rem;
+                border-radius: 8px;
             }
 
             nav a:hover {
-                opacity: 0.7;
+                background: var(--secondary-dark);
+                opacity: 1;
             }
 
             nav a.active {
-                color: var(--accent);
+                background: var(--gradient);
+                color: white;
             }
 
             .hero {
@@ -88,6 +100,17 @@
                 background-color: var(--primary-dark);
             }
 
+            .hero::before {
+                content: "";
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background: rgba(0, 0, 0, 0.3);
+                z-index: -1;
+            }
+
             .hero video {
                 position: absolute;
                 top: 0;
@@ -95,37 +118,45 @@
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
-                z-index: -1;
+                z-index: -2;
             }
 
             .hero h1 {
-                font-size: 3.5rem;
-                font-weight: 600;
-                margin-bottom: 0.5rem;
+                font-family: "Playfair Display", serif;
+                font-size: 4.5rem;
+                font-weight: 700;
+                margin-bottom: 1rem;
                 letter-spacing: -0.02em;
+                color: white;
+                text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+                animation: fadeInUp 1s ease-out;
             }
 
             .hero p {
-                font-size: 1.7rem;
-                color: var(--text-muted);
-                margin-bottom: 2rem;
+                font-size: 1.8rem;
+                color: rgba(255, 255, 255, 0.9);
+                margin-bottom: 2.5rem;
                 font-weight: 400;
+                animation: fadeInUp 1s ease-out 0.3s backwards;
             }
 
             .cta-button {
-                background: var(--accent);
+                background: var(--gradient);
                 color: white;
-                padding: 0.8rem 2rem;
+                padding: 1rem 2.5rem;
                 border-radius: 980px;
-                font-size: 1rem;
-                font-weight: 400;
+                font-size: 1.1rem;
+                font-weight: 500;
                 cursor: pointer;
                 transition: all 0.3s ease;
                 text-decoration: none;
+                box-shadow: 0 4px 15px rgba(0, 102, 204, 0.3);
+                animation: fadeInUp 1s ease-out 0.6s backwards;
             }
 
             .cta-button:hover {
-                background-color: #0077ed;
+                transform: translateY(-2px);
+                box-shadow: 0 6px 20px rgba(0, 102, 204, 0.4);
             }
 
             .featured-destinations {
@@ -135,39 +166,50 @@
             }
 
             .featured-destinations h2 {
-                font-size: 2.5rem;
-                font-weight: 600;
-                margin-bottom: 1rem;
+                font-family: "Playfair Display", serif;
+                font-size: 3rem;
+                font-weight: 700;
+                margin-bottom: 2rem;
                 letter-spacing: -0.02em;
+                background: var(--gradient);
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
             }
 
             .destinations-grid {
                 display: grid;
                 grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-                gap: 2rem;
+                gap: 2.5rem;
                 margin-top: 3rem;
-                max-width: 1024px;
+                max-width: 1200px;
                 margin: 3rem auto 0;
+                padding: 0 2rem;
             }
 
             .destination-card {
                 position: relative;
-                height: 400px;
-                border-radius: 18px;
+                height: 450px;
+                border-radius: 24px;
                 overflow: hidden;
                 cursor: pointer;
-                box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-                transition: transform 0.3s ease;
+                box-shadow: 0 8px 30px rgba(0, 0, 0, 0.1);
+                transition: all 0.4s ease;
             }
 
             .destination-card:hover {
-                transform: scale(1.02);
+                transform: translateY(-10px) scale(1.02);
+                box-shadow: 0 15px 45px rgba(0, 0, 0, 0.2);
             }
 
             .destination-card img {
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
+                transition: transform 0.8s ease;
+            }
+
+            .destination-card:hover img {
+                transform: scale(1.1);
             }
 
             .destination-info {
@@ -175,24 +217,44 @@
                 bottom: 0;
                 left: 0;
                 right: 0;
-                padding: 2rem;
+                padding: 2.5rem;
                 background: linear-gradient(
                     0deg,
-                    rgba(0, 0, 0, 0.7) 0%,
+                    rgba(0, 0, 0, 0.8) 0%,
                     rgba(0, 0, 0, 0) 100%
                 );
+                transform: translateY(30px);
+                opacity: 0;
+                transition: all 0.4s ease;
+            }
+
+            .destination-card:hover .destination-info {
+                transform: translateY(0);
+                opacity: 1;
             }
 
             .destination-info h3 {
-                font-size: 1.4rem;
-                margin-bottom: 0.5rem;
+                font-size: 1.6rem;
+                margin-bottom: 0.8rem;
                 color: white;
-                font-weight: 500;
+                font-weight: 600;
             }
 
             .destination-info p {
                 color: #f5f5f7;
-                font-size: 1.1rem;
+                font-size: 1.2rem;
+                font-weight: 500;
+            }
+
+            @keyframes fadeInUp {
+                from {
+                    opacity: 0;
+                    transform: translateY(20px);
+                }
+                to {
+                    opacity: 1;
+                    transform: translateY(0);
+                }
             }
         </style>
     </head>
@@ -212,7 +274,7 @@
 
         <main>
             <section class="hero">
-                <video autoplay muted loop></video>
+                <video autoplay muted loop>
                     <source src="../assets/videos/mount.mp4" type="video/mp4" />
                 </video>
                 <h1>Explore the Unknown</h1>
