design update, updated sectons

--- a/src/index.html
+++ b/src/index.html
@@ -341,9 +341,19 @@
 
         <main>
             <section class="hero">
-                <video autoplay muted loop>
-                    <source src="../assets/videos/mount.mp4" type="video/mp4" />
-                </video>
+                <img
+                    src="https://images.unsplash.com/photo-1500673922987-e212871fec22"
+                    alt="Mountain landscape"
+                    style="
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                        z-index: -2;
+                    "
+                />
                 <h1>Explore the Unknown</h1>
                 <p>Your journey begins here</p>
                 <a href="/destinations" class="cta-button">Discover Now</a>
@@ -410,7 +420,7 @@
                     </div>
                     <div class="experience-card">
                         <img
-                            src="https://images.unsplash.com/photo-1579271723124-12a4d982b39a"
+                            src="https://images.unsplash.com/photo-1525340581945-d5e2b09641c4"
                             alt="Northern Lights"
                         />
                         <div class="experience-info">
@@ -494,21 +504,6 @@
                         </p>
                     </div>
                 </div>
-            </section>
-
-            <section class="newsletter">
-                <h2>Get Travel Updates</h2>
-                <p>
-                    Subscribe to our newsletter for exclusive deals and travel
-                    tips
-                </p>
-                <form class="newsletter-form">
-                    <input
-                        type="email"
-                        placeholder="Enter your email address"
-                    />
-                    <button class="cta-button">Subscribe</button>
-                </form>
             </section>
         </main>
     </body>
