--- a/src/index.html
+++ b/src/index.html
@@ -331,7 +331,7 @@
                 <div class="logo">Wanderlust</div>
                 <ul>
                     <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="/destinations">Destinations</a></li>
+                    <li><a href="destinations.html">Destinations</a></li>
                     <li><a href="/packages">Packages</a></li>
                     <li><a href="/blog">Blog</a></li>
                     <li><a href="/contact">Contact</a></li>
